# betula-cluster

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: RESULTS.md  _worker.py  benchmark.py  build_vs_betulars.py  comprehensive.py  cosine_spike.py  results_memory.csv  results_quality.csv  results_real.csv  results_real_normalize.csv  results_real_scale.csv  results_scaling.csv
docs/: FEATURES.md  MATH.md  USAGE.md
examples/: 01_quickstart.ipynb  01_quickstart.py  02_embeddings_and_inspection.ipynb  02_embeddings_and_inspection.py  03_streaming_and_persistence.ipynb  03_streaming_and_persistence.py  04_method_comparison.ipynb  04_method_comparison.py  05_topology_mapper.ipynb  05_topology_mapper.py  06_streaming_density.ipynb  06_streaming_density.py  07_mixed_data_kprototypes.ipynb  07_mixed_data_kprototypes.py  08_quantile_sketches.ipynb  08_quantile_sketches.py  09_semisupervised_constraints.ipynb  09_semisupervised_constraints.py  10_sparse_highdim.ipynb  10_sparse_highdim.py  11_soft_assignment_coreset_diagnostics.ipynb  11_soft_assignment_coreset_diagnostics.py  12_drift_robust_memory.ipynb  12_drift_robust_memory.py  README.md
examples/usecases/: usecase_01_embedding_dedup.ipynb  usecase_01_embedding_dedup.py  usecase_02_log_anomaly_detection.ipynb  usecase_02_log_anomaly_detection.py  usecase_03_customer_segmentation.ipynb  usecase_03_customer_segmentation.py  usecase_04_rag_corpus_curation.ipynb  usecase_04_rag_corpus_curation.py  usecase_05_real_data_clustering.ipynb  usecase_05_real_data_clustering.py
python/betula_cluster/: __init__.py  __init__.pyi
research/: RESULTS-estep.md  gmm_cf_estep.py
src/: distance.rs  feature.rs  kernels.rs  lib.rs  linalg.rs  model.rs  python.rs  sparse.rs  stats.rs  stream.rs  topology.rs  tree.rs  types.rs
src/clustering/: gmm.rs  hdbscan.rs  kmeans.rs  kprototypes.rs  mod.rs  rng.rs  ward.rs
src/sketch/: ddsketch.rs  kll.rs  mod.rs
tests/: integration_api.rs  test_python.py
