[package]
name = "betula-cluster"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Numerically stable, fast clustering on BETULA CF-trees (BIRCH family)."
authors = ["Ilia Gradina <ilia.gradina@gmail.com>"]
repository = "https://github.com/ilgrad/betula-cluster"
readme = "README.md"
keywords = ["clustering", "birch", "betula", "cf-tree", "gmm"]
categories = ["algorithms", "science", "data-structures"]

[lib]
name = "betula_cluster"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "betula"
path = "src/bin/betula.rs"
required-features = ["cli"]

[dependencies]
num-traits = "0.2"
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
ciborium = { version = "0.2", optional = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"], optional = true }
numpy = { version = "0.29", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
persistence = ["dep:serde", "dep:ciborium"]
python = ["dep:pyo3", "dep:numpy", "persistence"]
cli = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
